[package]
name = "bandwidth_meter"
version = "0.1.0"
edition = "2021"

[dependencies]
ddp-rs = { git = "https://github.com/coral/ddp-rs" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
colorgrad = "0.6"
crossterm = "0.27"
ratatui = "0.26"
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tower = "0.4"
